# vectordb

./: Cargo.toml  DESIGN.md  README.md  dev_build.sh  embedded_quiver_usage.md  pyproject.toml  requirements.txt  vector_db_comparison.md
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  publish.yml
crates/quiver-cli/: Cargo.toml
crates/quiver-cli/src/: main.rs
crates/quiver-core/: Cargo.toml
crates/quiver-core/benches/: profile_insert.rs
crates/quiver-core/src/: collection.rs  db.rs  distance.rs  embedder.rs  error.rs  lib.rs  manager.rs  payload.rs  registry.rs  wal.rs
crates/quiver-core/src/index/: binary_flat.rs  faiss.rs  flat.rs  hnsw.rs  ivf.rs  ivf_pq.rs  mmap_flat.rs  mod.rs  quantized_flat.rs  quantized_fp16.rs
crates/quiver-embeddings/: Cargo.toml
crates/quiver-embeddings/src/: blocking.rs  lib.rs  openai.rs
crates/quiver-python/: Cargo.toml
crates/quiver-python/src/: lib.rs
crates/quiver-server/: Cargo.toml
crates/quiver-server/src/: main.rs
crates/vectordb-cli/: Cargo.toml
crates/vectordb-cli/src/: main.rs
crates/vectordb-core/: Cargo.toml
crates/vectordb-core/src/: collection.rs  distance.rs  error.rs  lib.rs  manager.rs  registry.rs
crates/vectordb-core/src/index/: faiss.rs  flat.rs  hnsw.rs  mod.rs
crates/vectordb-embeddings/: Cargo.toml
crates/vectordb-embeddings/src/: lib.rs  ollama.rs
crates/vectordb-python/: Cargo.toml
crates/vectordb-python/src/: lib.rs
crates/vectordb-server/: Cargo.toml
crates/vectordb-server/src/: main.rs
quiver_vector_db/: __init__.py  __init__.pyi
sdks/typescript/: package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts
tests/: conftest.py  test_benchmark.py  test_binary_index.py  test_competitive_benchmarks.py  test_coverage_gaps.py  test_perf_regression.py  test_readme_examples.py  test_snapshots.py
