[workspace]
members = [
    "crates/quiver-core",
    "crates/quiver-embeddings",
    "crates/quiver-server",
    "crates/quiver-cli",
    "crates/quiver-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quiver contributors"]
license = "MIT"
repository = "https://github.com/rhshriva/Quiver"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ANN / HNSW
instant-distance = "0.6"

# SIMD-accelerated distance (optional feature)
# simsimd = "3"

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Random
rand = "0.8"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tempfile = "3"

# LRU cache for IndexRegistry
lru = "0.12"

# FAISS bindings (optional; requires libfaiss_c to be installed or use features=["static"])
# NOTE: optional = true must live in the crate-level Cargo.toml, not here.
faiss = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
