[workspace]
members = [
    "crates/quiver-core",
    "crates/quiver-python",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Quiver contributors"]
license = "Apache-2.0"
repository = "https://github.com/rhshriva/Quiver"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Memory-mapped files
memmap2 = "0.9"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Random
rand = "0.8"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
tempfile = "3"

# Binary serialization for index snapshots and WAL
bincode = "1"

# Half-precision floating point (FP16) for quantized indexes
half = { version = "2", features = ["serde"] }

# LRU cache for IndexRegistry
lru = "0.12"

# Parallel iteration for multi-threaded HNSW insert
rayon = "1.10"

# FAISS bindings (optional; requires libfaiss_c to be installed or use features=["static"])
# NOTE: optional = true must live in the crate-level Cargo.toml, not here.
faiss = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
