[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "quiver"
version = "0.1.0"
description = "Fast embedded vector database with Python bindings"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
manifest-path = "crates/quiver-python/Cargo.toml"
module-name = "quiver"
features = ["pyo3/extension-module"]
