[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "quiver-vector-db"
version = "0.1.3"
description = "Fast embedded vector database with Python bindings"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["vector", "database", "embeddings", "similarity-search", "ann", "hnsw", "faiss", "rag"]
authors = [{ name = "Quiver contributors" }]
urls = { Homepage = "https://github.com/rhshriva/Quiver", Repository = "https://github.com/rhshriva/Quiver", Documentation = "https://github.com/rhshriva/Quiver#readme" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]
benchmark = ["pytest", "numpy", "hnswlib", "faiss-cpu", "chromadb", "usearch", "lancedb"]
sentence-transformers = ["sentence-transformers>=2.0"]
openai = ["openai>=1.0"]
all = ["sentence-transformers>=2.0", "openai>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
manifest-path = "crates/quiver-python/Cargo.toml"
module-name = "quiver_vector_db"
features = ["pyo3/extension-module"]
python-source = "."
include = [
    "quiver_vector_db/__init__.pyi",
    "quiver_vector_db/py.typed",
    "quiver_vector_db/__init__.py",
    "quiver_vector_db/bm25.py",
    "quiver_vector_db/embedding.py",
    "quiver_vector_db/text_collection.py",
    "quiver_vector_db/multi_collection.py",
    "quiver_vector_db/server.py",
]
