[package]
name = "quiver-server"
version.workspace = true
edition.workspace = true
description = "HTTP/JSON server for Quiver"

[[bin]]
name = "quiver-server"
path = "src/main.rs"

[features]
faiss = ["quiver-core/faiss"]

[dependencies]
quiver-core = { path = "../quiver-core" }
quiver-embeddings = { path = "../quiver-embeddings" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
