[package]
name = "vectordb-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for interacting with a vectordb-server"

[[bin]]
name = "vdb"
path = "src/main.rs"

[dependencies]
vectordb-core = { path = "../vectordb-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
